add new images fix search

--- a/.env-example
+++ b/.env-example
@@ -1,9 +1,9 @@
-YII_ENV        = 'dev'
-YII_DEBUG      = 'true'
+YII_ENV        =
+YII_DEBUG      =
 
-DB_DSN         = СВОЕ подключение к базе
-DB_USERNAME    = Свой пользователь
-DB_PASSWORD    = Свой пароль
+DB_DSN         =
+DB_USERNAME    =
+DB_PASSWORD    =
 
-ADMIN_NAME     =   Имя пользователя .Придумать свое
-ADMIN_PASSWORD = Пароль от пользователя.Придумать свое
+ADMIN_NAME     =
+ADMIN_PASSWORD =
