hidden debug panel

--- a/.env-example
+++ b/.env-example
@@ -5,5 +5,9 @@ DB_DSN         =
 DB_USERNAME    =
 DB_PASSWORD    =
 
+OLD_DB_DSN     =
+OLD_DB_USERNAME=
+OLD_DB_PASSWORD=
+
 ADMIN_NAME     =
 ADMIN_PASSWORD =
